# BigAssTerrainSim

./: .gitignore  CMakeLists.txt  Copernicus_DSM_COG_10_S90_00_W180_00_DEM.tif  Copernicus_DSM_COG_10_S90_00_W180_00_DEM.tif.aux.xml  Dockerfile  Makefile  README.md  agent_positions.csv  readme.html  terrain_heightmap.csv  tileList.txt
data/: 2024-10-01-00_00_2024-10-01-23_59_Sentinel-2_Quarterly_Mosaics_True_Color_Cloudless.tiff.aux.xml
data/GMTED_7pnt5arc_7pnt5arc_7pnt5arc_7pnt5arc_7pnt5arc_7pnt5arc_7pnt5arc_15arc_15arc_15arc_15arc_15arc_15arc_15arc_30arc_30arc_30arc_30arc_30arc_30arc_30arc_n47RrIKWcISms4JK0BEy/: README.md
include/: agent_simulator.h  raster_loader.h
scripts/: animate_agents.py  pull_from_sentinelhub.py  requirements.txt  view_tiffs.py
src/: agent_simulator.cpp  main.cpp  raster_loader.cpp
tests/: raster_loader_test.cpp
